# oxys

./: .envrc  .gitignore  AGENTS.md  CONFIG.md  Cargo.toml  NOTES-oxys-vs-aerynos-moss.md  OXYS_PACKAGE_FORMAT.md  README.md  RELEASE_0.1.md  doc.md  rust-toolchain.toml
docs/examples/: desktop-session-proposed.fe2o3
oxys/: Cargo.toml  DISK_CONFIG.md  INSTALL_PIPELINE.md  LICENSE-MIT  OVERVIEW.md
oxys-build/: kernel-config.md  oxys-packages.txt
oxys-build/oxys-overlay/app-admin/oxys/: metadata.xml  oxys-0.1.0.ebuild
oxys-build/oxys-overlay/gui-shells/noctalia/: metadata.xml  noctalia-9999.ebuild
oxys-build/oxys-overlay/profiles/: categories
oxys-build/podman/: Containerfile.alderlake  Containerfile.v3  Containerfile.znver3  Containerfile.znver4  Containerfile.znver5  build.sh
oxys-build/podman/kernel/: alderlake.fragment  base.config  hardware.fragment  v3.fragment  znver3.fragment  znver4.fragment  znver5.fragment
oxys-build/podman/scripts/: oxys-build-packages.sh  oxys-entrypoint.sh
oxys-build/scripts/: stage-oxys-package.sh
oxys-installer/: Cargo.toml  manifest.toml
oxys-installer/configs/: base.fe2o3  base.rs  custom.fe2o3  custom.rs  desktop.fe2o3  desktop.rs
oxys-installer/src/: app.rs  hardware.rs  main.rs  network.rs  prebuilt.rs  provisioning.rs
oxys-installer/src/app/: identity.rs  input.rs  mod.rs  polling.rs  tasks.rs
oxys-installer/src/ui/: layout.rs  mod.rs  primitives.rs  screens.rs  theme.rs
oxys-installer/src/ui/screens/: config.rs  credentials.rs  hardware.rs  progress.rs  storage.rs  summary.rs  welcome.rs
oxys-iso/: .containerignore  .gitignore  Containerfile  README.md  build.sh  git-sources.conf
oxys-iso/catalyst-overrides/: kmerge.sh
oxys-iso/fsscript/: fsscript.sh
oxys-iso/overlay/etc/NetworkManager/conf.d/: 10-oxys-dns.conf
oxys-iso/overlay/etc/NetworkManager/system-connections/: oxys-wired.nmconnection
oxys-iso/overlay/etc/conf.d/: modemmanager  nftables
oxys-iso/overlay/etc/init.d/: oxys-gentoo-repo
oxys-iso/overlay/etc/portage/repos.conf/: guru.conf  oxys.conf
oxys-iso/overlay/etc/xdg/fastfetch/: config.jsonc  oxysos.txt
oxys-iso/overlay/root/configs/: base.fe2o3  custom.fe2o3  desktop.fe2o3
oxys-iso/overlay/var/db/repos/oxys/gui-shells/noctalia/: noctalia-9999.ebuild
oxys-iso/overlay/var/db/repos/oxys/metadata/: layout.conf
oxys-iso/overlay/var/db/repos/oxys/profiles/: categories
oxys-iso/overlay/var/lib/nftables/: rules-save
oxys-iso/portage_confdir/: make.conf
oxys-iso/portage_confdir/env/: prefetched-git-source.conf
oxys-iso/portage_confdir/package.accept_keywords/: desktop
oxys-iso/portage_confdir/package.mask/: no-systemd
oxys-iso/portage_confdir/package.use/: desktop  firmware  live-networking
oxys-iso/scripts/: build-installer-overlay.sh  enter-container.sh  prefetch-git-sources.sh  refresh-installer-iso.sh  resolve-kernel-build.sh  run-qemu.sh
oxys-iso/specs/: installcd-stage1.spec  installcd-stage2.spec
oxys-login/: Cargo.toml
oxys-login/src/: main.rs  runtime.rs  session.rs  system.rs  theme.rs  ui.rs
oxys/macros/: Cargo.toml
oxys/macros/src/: lib.rs
oxys/scripts/: validate-oxys-package-spike.sh
oxys/src/: compile.rs  config_source.rs  defaults_report.rs  detect.rs  diff.rs  disk.rs  exec.rs  graphics.rs  install.rs  kernel_cmdline.rs  lib.rs  locales.rs  main.rs  manifest.rs  package_check.rs  prelude.rs  runtime.rs  session.rs  summary.rs  timezones.rs  util.rs
oxys/src/cli/: apply.rs  compile.rs  install.rs  manifest_io.rs  mod.rs  output.rs  package.rs  update.rs  update_report.rs  welcome.rs
oxys/src/disk/: apply.rs  ext4.rs  mod.rs  preflight.rs  zfs.rs
oxys/src/graphics/: capability.rs  resolved.rs  tests.rs
oxys/src/install/: boot.rs  exec.rs  filesystem.rs  host.rs  login.rs  noctalia-palette.json  plan.rs  portage.rs  services.rs  users.rs
oxys/src/install/plan/: planner.rs  tests.rs
oxys/src/install/plan/tests/: boot.rs  installation.rs  users.rs
oxys/src/manifest/: accounts.rs  compiler.rs  disk.rs  firewall.rs  packages.rs  settings.rs  swap.rs  tests.rs
oxys/src/session/: helpers.rs  resolved.rs  tests.rs
oxys/src/use_resolver/: cache.rs  emerge.rs  error.rs  generate.rs  mod.rs  parse.rs  path.rs  repo.rs  resolver.rs  types.rs  update.rs  util.rs  version.rs
oxys/src/use_resolver/emerge/: tests.rs
oxys/src/use_resolver/generate/: tests.rs  write.rs
oxys/src/use_resolver/parse/: required_use.rs  tests.rs
oxys/src/use_resolver/rules/: binary.rs  dependencies.rs  metadata.rs  mod.rs  policy.rs  required_use.rs
oxys/tests/: apply.rs  check.rs  package_check.rs  packages.rs  portage_integration.rs  update.rs
oxys/tests/portage_integration/: constraints.rs  policy.rs  resolution.rs
oxys/tests/support/: fixture_repo.rs
