[workspace]
resolver = "3"
members = [
    "oxys",
    "oxys-login",
    "oxys-installer",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
oxys = { path = "oxys" }
clap = { version = "4.5", features = ["derive"] }
colored = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
thiserror = "2"
sha2 = "0.11"
crossterm = "0.29"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tempfile = "3"
ratatui = { version = "0.30", default-features = false, features = [
    "crossterm",
    "all-widgets",
    "layout-cache",
    "macros",
    "underline-color",
] }
