[package]
name = "oxys-installer"
version.workspace = true
edition.workspace = true

[dependencies]
clap = { workspace = true }
colored = { workspace = true }
crossterm = { workspace = true }
oxys = { workspace = true }
ratatui = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
