[package]
name = "oxys"
version = "0.1.0"
edition = "2024"
description = "Declarative manifest/resolver/CLI for a Rust-first, Gentoo/Portage-based Linux system"
license = "MIT OR Apache-2.0"
repository = "https://github.com/oxydizer/oxys"
readme = "OVERVIEW.md"
keywords = ["gentoo", "portage", "package-manager", "linux"]
categories = ["command-line-utilities", "os::linux-apis"]
exclude = [
    ".oxys/**",
]

# Deps are pinned literally (not `{ workspace = true }`) on purpose: this crate
# is staged standalone onto the live ISO for on-target config compilation (see
# oxys-iso/scripts/build-installer-overlay.sh), where there's no parent
# workspace to inherit from — the nested oxys-macros crate is staged alongside.
# Keep in sync with the root [workspace.dependencies] table when bumping a
# version here.
[dependencies]
oxys-macros = { path = "macros", version = "0.1.0" }
clap = { version = "4.5", features = ["derive"], optional = true }
colored = { version = "3", optional = true }
crossterm = { version = "0.29", optional = true }
ratatui = { version = "0.30", default-features = false, features = ["crossterm"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
toml = "1"
thiserror = "2"
sha2 = "0.11"
rustix = { version = "1.1", features = ["fs", "process", "time"] }

# The `oxys` binary and its src/cli/ modules are the only users of the
# clap/colored/crossterm/ratatui stack; the library never touches them. The
# on-target config scaffold (src/compile.rs) depends on this crate with
# default-features = false so a config compile skips building the whole TUI
# dependency tree. Everything else keeps the default and is unaffected.
[features]
default = ["cli"]
cli = ["dep:clap", "dep:colored", "dep:crossterm", "dep:ratatui"]

[[bin]]
name = "oxys"
path = "src/main.rs"
required-features = ["cli"]

[dev-dependencies]
tempfile = "3"
